# oratio-on-prem-prototype

./: .gitignore  README.md  pyproject.toml
.docker/: Dockerfile.backend  Dockerfile.nginxfrontend
.github/workflows/: cd-accountants-backend.yml  cd-accountants-frontend.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  mongo.py
backend/app/llm/: openai.py
backend/app/prompts/: chat_combine_default.txt
backend/app/retriever/: base.py  classic_rag.py  query_expansion.py
backend/app/routers/: answer.py
backend/app/schemas/: answer.py
backend/app/utils/: embeddings.py  helpers.py
backend/app/vectorstore/: qdrant.py
data-indexing/.docker/: Dockerfile.cdc  Dockerfile.frontend  Dockerfile.ui_service
data-indexing/2-data-ingestion/: cdc.py  config.py  pyproject.toml  rne_data.py  satff.py  test_cdc.py  utils.py
data-indexing/2-data-ingestion/queues/: azure_queue.py  base.py  mq.py
data-indexing/3-feature-pipeline/: auto_restart.sh  main.py  pyproject.toml  restart_bytewax.sh
data-indexing/3-feature-pipeline/data_flow/: stream_input.py  stream_output.py
data-indexing/3-feature-pipeline/data_logic/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
data-indexing/3-feature-pipeline/models/: base.py  chunk.py  clean.py  embedded_chunk.py  raw.py
data-indexing/3-feature-pipeline/utils/: chunking.py  cleaning.py  embeddings.py
data-indexing/etl-backend/: documents.py  main.py  pyproject.toml  rne_dict.py  write_rne_docs.py
data-indexing/etl-backend/db/: documents.py
data-indexing/etl-backend/services/: pdf_processing.py
data-indexing/evaluation-pipeline/: settings.py  test_azure.py
data-indexing/evaluation-pipeline/evaluation/: rag.py
data-indexing/frontend/: app.py  config.py
data-indexing/inference/: main.py
data-indexing/inference/llm/: prompt_templates.py
data-indexing/inference/rag/: retriever.py
data-indexing/k8s/deployments/: frontend-deployment.yaml  mongo1-deployment.yaml  mongo2-deployment.yaml  mongo3-deployment.yaml
data-indexing/k8s/services/: cdc-service.yaml  mongo3-service.yaml
data-indexing/k8s/volumes/: mongo-pv.yaml  qdrant-pv.yaml
data-indexing/llm_service/app/: server.py
frontend/: .env.development  .env.production  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: About.tsx  App.tsx  Hero.tsx  Navigation.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: Button.tsx  CopyButton.tsx  Dropdown.tsx  Help.tsx  ProtectedRoute.tsx  SettingsBar.tsx  SourceDropdown.tsx
frontend/src/conversation/: Conversation.tsx  ConversationBubble.tsx  (+6 more)
infra/k8s/: backend-deployment.yml  frontend-deployment.yml
ops/: .gitignore  __main__.py  pyproject.toml
oratio_prototype/: .gitignore  docker-compose.yml
oratio_prototype/.docker/: Dockerfile.backend  Dockerfile.bytewax  Dockerfile.etl-backend  Dockerfile.frontend  Dockerfile.inference
oratio_prototype/2-data-ingestion/: .env  config.py  pyproject.toml
oratio_prototype/3-feature-pipeline/: config.py  hello.py  pyproject.toml  run_dataflow.py
oratio_prototype/backend/: Dockerfile  config.py  main.py  pyproject.toml
oratio_prototype/backend/db/: documents.py  mongo.py
oratio_prototype/etl-backend/: config.py  main.py  pyproject.toml
oratio_prototype/evaluation-pipeline/: evaluation_pipeline.py  inference_pipeline.py  main.py  pyproject.toml  settings.py  test_ragas.py
oratio_prototype/evaluation-pipeline/app/: llama2.py
oratio_prototype/evaluation-pipeline/evaluation/: model.py  rag.py
oratio_prototype/evaluation-pipeline/llm/: prompt_templates.py
oratio_prototype/evaluation-pipeline/rag/: retriever.py
oratio_prototype/frontend/: app.py  pyproject.toml
oratio_prototype/inference/: config.py  inference_pipeline.py  pyproject.toml  test_rag.py
oratio_prototype/llm_service/: pyproject.toml
oratio_prototype/ui/: Dockerfile  app.py  pyproject.toml
oratio_prototype/ui_service/: app.py  config.py  pyproject.toml
(+28 files in other folders)
