[tool.poetry]
name = "ops"
version = "0.1.0"
description = ""
authors = ["mohamedayari1 <ayarim781@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pulumi-azure-native = ">=2.0.0,<3.0.0"
pulumi = ">=3.5.1,<4.0.0"
pulumi-azuread = ">=4.3.0,<5.0.0"
pulumi-random = ">=4.2.0,<5.0.0"
pulumi-tls = ">=4.0.0,<5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
