[project]
name = "3-feature-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bytewax==0.18.2",
    "langchain>=0.3.24",
    "openai==1.66.5",
    "pika>=1.3.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "qdrant-client>=1.14.2",
    "structlog>=25.2.0",
    "unstructured>=0.17.2",
]
