[tool.poetry]
name = "evaluation-pipeline"
version = "0.1.0"
description = ""
authors = ["mohamedayari1 <ayarim781@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pydantic = "^2.6.3"
pydantic-settings = "^2.1.0"
# bytewax = "0.18.2"
# pika = "^1.3.2"
qdrant-client = "^1.8.0"
unstructured = "^0.12.6"
langchain = "^0.1.13"
sentence-transformers = "^2.6.1"
instructorembedding = "^1.0.1"
numpy = "^1.26.4"
langchain-openai = "^0.1.3"
gdown = "^5.1.0"
structlog = "^24.1.0"
rich = "^13.7.1"
pip = "^24.0"
# install = "^1.3.5"
comet-ml = "^3.41.0"
ruff = "^0.4.3"
comet-llm = "^2.2.4"
pandas = "^2.2.2"
datasets = "^2.19.1"
peft = "^0.11.1"
bitsandbytes = "^0.43.1"
ragas = "^0.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
